tests/golden/parser/accept/top_level_chunk.rua
let value = 1;
println!("{}", value + 1);
