tests/golden/parser/reject/incomplete_call.rua
fn main() {
    compute(1,
}
